fix interests on mobile

--- a/src/static/static/css/new_interests.css
+++ b/src/static/static/css/new_interests.css
@@ -53,6 +53,22 @@
 }
 .category_hidden .category_name{
 	margin-left:100px;
+	border-bottom: none;
+}
+.subcategory{
+	display:none;
+	margin-left:100px;
+}
+
+@media(max-width:450px){
+	.subcategory{
+	display:none;
+	margin-left:50px;
+	}
+	.category_hidden .category_name{
+	margin-left:50px;
+	border-bottom: none;
+	}
 }
 
 /* Questions */
@@ -68,9 +84,4 @@
 }
 #one input{
 	visibility: hidden;
-}
-.subcategory{
-	border-bottom:1px solid #1fbad6;
-	display:none;
-	margin-left:100px!important;
 }
